--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# nso / project specific stuff 
+*.retry
+README.ncs
+README.netsim
+logs/
+ncs-cdb/
+ncs-java-vm.log
+ncs-python-vm.log
+ncs.conf
+netsim/
+packages/
+state/
+storedstate
+host_vars/
+inventory.yaml
+
+
+# standard python stuff below here
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -53,9 +72,8 @@ coverage.xml
 
 # Django stuff:
 *.log
-.static_storage/
-.media/
 local_settings.py
+db.sqlite3
 
 # Flask stuff:
 instance/
